Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -309,13 +309,7 @@ R Sentiment (Left) vs. Python Sentiment (Right)  We found the two used slightly 
     </main>
 
     <footer id="footer" class="footer">
-      <div class="social-links">
-  <a href="https://dfontana.github.io/GaggleOfKaggle/index.xml" type="application/rss+xml" class="iconfont icon-rss"
-    title="rss" target="_blank">
-  </a>
-</div>
-
-<div class="copyright">
+      <div class="copyright">
   <span class="power-by">
     Powered by <a class="hexo-link" href="https://gohugo.io">Hugo</a>
   </span>
@@ -329,7 +323,7 @@ R Sentiment (Left) vs. Python Sentiment (Right)  We found the two used slightly 
     2018
     <span class="heart">
       <i class="iconfont icon-heart"></i>
-    </span></span>
+    </span><span class="author">Dylan Fontana, Stephanie Martin, Owen Chace, Ranier Gran</span></span>
 </div>
     </footer>
 
