--- a/overview/index.html
+++ b/overview/index.html
@@ -190,13 +190,7 @@
     </main>
 
     <footer id="footer" class="footer">
-      <div class="social-links">
-  <a href="https://dfontana.github.io/GaggleOfKaggle/index.xml" type="application/rss+xml" class="iconfont icon-rss"
-    title="rss" target="_blank">
-  </a>
-</div>
-
-<div class="copyright">
+      <div class="copyright">
   <span class="power-by">
     Powered by <a class="hexo-link" href="https://gohugo.io">Hugo</a>
   </span>
@@ -210,7 +204,7 @@
     2018
     <span class="heart">
       <i class="iconfont icon-heart"></i>
-    </span></span>
+    </span><span class="author">Dylan Fontana, Stephanie Martin, Owen Chace, Ranier Gran</span></span>
 </div>
     </footer>
 
